adaptando mi codigo css a scss

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <section class="container">
         <article>
-            <h1>Maximiliano Britez</h1>
-            <h2>Full stack developer</h2>
+            <h1>Hola! Soy</h1>
+            <h2>Maximiliano Britez</h2>
             <p>Soy un desarrollador Full Stack con experiencia en el desarrollo web tanto del lado del cliente como del servidor. Creo aplicaciones web completas y escalables utilizando una variedad de tecnologías modernas. Mi objetivo es brindar soluciones tecnológicas de alta calidad que cumplan con los requisitos del cliente y ofrezcan una experiencia de usuario excepcional.</p>
 
             <img class="img-index" src="./media/htmlcssjs.jpg" alt="ejemplo imagen">
