--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desarrollador Full Stack con experiencia en el desarrollo web. Creo aplicaciones web completas y escalables utilizando tecnologías modernas.">
+    <link rel="icon" type="image/png" href="../media/favicon.png"/>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Maximiliano-Britez</title>
+    <title>Portafolio de Maximiliano Britez - Desarrollador Full Stack</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
@@ -51,7 +53,7 @@
     </header>
     <section  class="container">
         <article>
-            <h2>Más sobre mi</h2>
+            <h1>Más sobre mi</h1>
             <p>Como desarrollador Full Stack, tengo experiencia tanto en el desarrollo del lado del cliente como en el del servidor. Puedo crear aplicaciones web completas, desde la estructura y funcionalidad del servidor hasta la interfaz de usuario y la experiencia del usuario. Tengo conocimientos en múltiples lenguajes de programación y tecnologías, incluyendo <strong>HTML, CSS, JavaScript,</strong> frameworks de frontend como <strong>React</strong> o <strong>Angular</strong>, así como tecnologías de backend como <strong>Node.js</strong> y bases de datos como <strong>MySQL</strong> o <strong>MongoDB</strong>.</p>
             <p>Soy capaz de diseñar y desarrollar arquitecturas de aplicaciones escalables y eficientes, garantizando un rendimiento óptimo y una experiencia de usuario fluida. Tengo habilidades para trabajar en equipo y comunicarme eficazmente con otros miembros del equipo, como diseñadores, otros desarrolladores y especialistas en UX/UI. Además, estoy constantemente aprendiendo y manteniéndome al tanto de las últimas tendencias y avances en desarrollo web para ofrecer soluciones modernas y actualizadas a mis clientes.</p>
             <p>Con mi experiencia como <em>desarrollador Full Stack</em>, estoy preparado para asumir diversos desafíos y colaborar en proyectos de desarrollo web de principio a fin. Mi objetivo es crear soluciones tecnológicas innovadoras y de alta calidad que cumplan con los requisitos y expectativas del cliente.</p>
