--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    <link rel="stylesheet" href="./css/styles.css">
-    <title>Maximiliano-Britez</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Desarrollador Full Stack con experiencia en el desarrollo web. Creo aplicaciones web completas y escalables utilizando tecnologías modernas.">
+    <link rel="icon" type="image/png" href="./media/favicon.png"/>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Portafolio de Maximiliano Britez - Desarrollador Full Stack</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -59,7 +62,7 @@
             <h2>Maximiliano Britez</h2>
             <p>Soy un desarrollador Full Stack con experiencia en el desarrollo web tanto del lado del cliente como del servidor. Creo aplicaciones web completas y escalables utilizando una variedad de tecnologías modernas. Mi objetivo es brindar soluciones tecnológicas de alta calidad que cumplan con los requisitos del cliente y ofrezcan una experiencia de usuario excepcional.</p>
 
-            <img class="img-index" src="./media/htmlcssjs.jpg" alt="ejemplo imagen">
+            <img class="img-index" src="./media/htmlcssjs.jpg" alt="Imagen que representa el desarrollo web con HTML, CSS y JavaScript">
 
             <p>Si necesitas más información o detalles específicos, te invito a conocer <a href="./pages/about.html">más sobre mi</a>.</p>
 
