--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desarrollador Full Stack con experiencia en el desarrollo web. Creo aplicaciones web completas y escalables utilizando tecnologías modernas.">
+    <link rel="icon" type="image/png" href="../media/favicon.png"/>
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Maximiliano-Britez</title>
+    <title>Portafolio de Maximiliano Britez - Desarrollador Full Stack</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
@@ -55,7 +57,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h2 class="card-title text-center">Contacto</h2>
+                        <h1 class="card-title text-center">Contacto</h1>
                         <form action="" method="post">
                             <div class="form-group">
                                 <label for="name">Nombre:</label>
